--- a/app/assets/stylesheets/views/shared/header.scss
+++ b/app/assets/stylesheets/views/shared/header.scss
@@ -8,6 +8,13 @@
     color: #B0344E;
   }
 
+  .padding-top-9 {
+    padding-top: 9px;
+  }
+
+  .navbar-right {
+    margin-right: -40px;
+  }
 
   #navbar {
     .mobile {
